deployment/k8s/app-admin/main.dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: $SERVICE_NAME
  template:
    metadata:
      name: $SERVICE_NAME
      labels:
        name: $SERVICE_NAME
    spec:
      containers:
        - name: $SERVICE_NAME
          image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$IMAGE_TAG
          imagePullPolicy: Always
#          livenessProbe:
#            httpGet:
#              path: $SERVICE_PATH/actuator/info
#              port: 8080
#              httpHeaders:
#                - name: X-Device-ID
#                  value: HealthCheck
#            initialDelaySeconds: 90
#            timeoutSeconds: 1
#          readinessProbe:
#            httpGet:
#              path: $SERVICE_PATH/actuator/health
#              port: 8080
#              httpHeaders:
#                - name: X-Device-ID
#                  value: HealthCheck
#            initialDelaySeconds: 80
#            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-image-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80

  selector:
    name: $SERVICE_NAME
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: yody-letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: $SERVICE_NAME
spec:
  tls:
    - hosts:
        - $HOST
      secretName: $SERVICE_NAME-tls
  rules:
    - host: $HOST
      http:
        paths:
          - backend:
              serviceName: $SERVICE_NAME
              servicePort: 80
            path: $SERVICE_PATH/
